k8s-rewrite/charts/whoami/ingress.yaml
# whoami Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  namespace: whoami
spec:
  rules:
  - host: whoami.branconet.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 80
